--- a/star.org
+++ b/star.org
@@ -7,7 +7,7 @@ Crafting Code, Building Success
 
 Hi, I'm Lysander.
 
-I've been writing code since 1995, but just recently started as a Go developer. I started getting used to the Go ecosystem by doing [[Go by Example][https://gobyexample.com]], and writing some basic command line tools to automate things at work. For putting code together to make small tools. Robert Griesemer, Rob Pike, and Ken Thompson did a lovely job with the language. I love how they made things like gofmt be opinionated because it gets people to stop arguing about minutiae and get started writing idiomatic code. Eventually, I got to the point where I wanted to be able to organize bigger projects, compile code, run tests, manage dependencies, and all the rest of it, and found that, while the Go ecosystem has already developed a nice, widely-adopted solution for dependency management [[go.mod][https://go.dev/ref/mod]], when it comes to organizing bigger projects, seeing the state of things, compiling code, running tests, and having a seamless development process, the ecosystem didn't have a one-stop tool for this sort of thing. 
+I've been writing code since 1995, but just recently started as a Go developer. I started getting used to the Go ecosystem by doing [[https://gobyexample.com][Go by Example]], and writing some basic command line tools to automate things at work. For putting code together to make small tools. Robert Griesemer, Rob Pike, and Ken Thompson did a lovely job with the language. I love how they made things like gofmt be opinionated because it gets people to stop arguing about minutiae and get started writing idiomatic code. Eventually, I got to the point where I wanted to be able to organize bigger projects, compile code, run tests, manage dependencies, and all the rest of it, and found that, while the Go ecosystem has already developed a nice, widely-adopted solution for dependency management [[https://go.dev/ref/mod][go.mod]], when it comes to organizing bigger projects, seeing the state of things, compiling code, running tests, and having a seamless development process, the ecosystem didn't have a one-stop tool for this sort of thing. 
 
 This is totally understandable: Depending upon the needs of a project and the prior experience of the developers, many individuals and teams rolled their own solutions for different parts of the software-development process. After looking at well over a thousand GitHub repositories to see how they structured their projects, whether or not they had a Makefile (and what it looked like), and on-and-on, I developed some opinions of my own as to how Go projects might best be structured, and some tooling that should save development teams many hours and headaches.
 
@@ -27,7 +27,7 @@ Ever since complex systems were first developed, folks have had to make systems 
 
 You are likely familiar with such tools as Apache Ant, Maven, and Gradle. These tools appeared on the scene later and abstracted away different layers of what would have been written in a Makefile. They have shaped the expectations many developers havein terms of project organization. The idea of having a `lib` directory for libraries or dependencies that are not available via a package manager, and a `src/<main/test>/resources` directory for non-code resources like configuration files are baked into the Maven/Gradle ecosystem. 
 
-Around the same time, Go and Clojure entered the scene. Whereas the exact date that Johannes Staffans invented the Polylith command-line tool is not widely documented (I couldn't find it), it entered the Clojure ecosystem in the late 2010s and does a lovely job of helping developers write modular code by splitting the constituent elements into `components` and `bases`, and thinking about them as lego blocks. Since Go has eschewed inheritance in favor of composition, and since Go has given us the lovely option of making certain packages `internal`, it lends itself very nicely to the lego-like Polylith architecture. Follow this link to learn more about [[Polylith][https://polylith.gitbook.io/polylith/]]
+Around the same time, Go and Clojure entered the scene. Whereas the exact date that Johannes Staffans invented the Polylith command-line tool is not widely documented (I couldn't find it), it entered the Clojure ecosystem in the late 2010s and does a lovely job of helping developers write modular code by splitting the constituent elements into `components` and `bases`, and thinking about them as lego blocks. Since Go has eschewed inheritance in favor of composition, and since Go has given us the lovely option of making certain packages `internal`, it lends itself very nicely to the lego-like Polylith architecture. Follow this link to learn more about [[https://polylith.gitbook.io/polylith/][Polylith]]
 
 The Idea for GoForge came about as I was pondering the Polylith architecture, Go's `internal` package structure, and general patterns I'd seen whilst perusing thousands of Git repositories containing Go code.
 
