--- a/star.org
+++ b/star.org
@@ -31,11 +31,11 @@ You are likely familiar with such tools as Apache Ant, Maven, and Gradle. These 
 
 *** Clojure and Go: Polylith and GoForge
 
-Around the same time, Go and Clojure entered the scene. Whereas the exact date that Johannes Staffans invented the Polylith command-line tool is not widely documented (I couldn't find it), it entered the Clojure ecosystem in the late 2010s and does a lovely job of helping developers write modular code by splitting the constituent elements into `components` and `bases`, and thinking about them as lego blocks. Since Go has eschewed inheritance in favor of composition, and since Go has given us the lovely option of making certain packages `internal`, it lends itself very nicely to the lego-like Polylith architecture. Follow this link to learn more about [[https://polylith.gitbook.io/polylith/][Polylith]]
+Go and Clojure entered the scene in the late '00s. Whereas the exact date that Johannes Staffans invented the Polylith command-line tool is not widely documented (I couldn't find it), it entered the Clojure ecosystem in the late 2010s and does a lovely job of helping developers write modular code by splitting the constituent elements into `components` and `bases`, and thinking about them as lego blocks. Since Go has eschewed inheritance in favor of composition, and wisely given us the option of making certain packages `internal`, it lends itself very nicely to the lego-like Polylith architecture. Follow this link to learn more about [[https://polylith.gitbook.io/polylith/][Polylith]]
 
-The Idea for GoForge came about as I was pondering the Polylith architecture, Go's `internal` package structure, and general patterns I'd seen whilst perusing thousands of Git repositories containing Go code.
+The Idea for GoForge came about as I was pondering the Polylith architecture, Go's `internal` package structure, and general patterns I'd seen whilst perusing thousands of Git repositories containing Go code. It was now merely a question of combining all the ingredients!
 
-I wanted a command-line tool to integrate into the developer workflow, that would allow developers the leeway to explore and learn more about the problem before committing to structure, and then help them easily structure their solutions to "play nice" with the other pieces of the puzzle. For example, let's say that part of my workflow involves making a particular set of API calls to `foo.com/api/v1/bar/baz`, then once I get the API code working, I can turn it into a little lego-block-like component that I can combine with another component for fetching the API key and turn that into a "base". I can then call this "base" in the actual app that I'm running, and the little bit of code I made can be used by anyone else that needs to make these API calls, thus cutting down on code repetition (DRY-principle). Then, anyone who wishes to make a change to the component for their own purposes can do so freely, as long as they don't generate breaking changes. 
+I wanted a command-line tool to integrate into the developer workflow, that would allow developers the leeway to explore and learn more about the problem before committing to structure, and then help them easily structure their solutions to "play nice" with the other pieces of the puzzle. For example, let's say that part of my workflow involves making a particular set of API calls to `foo.com/api/v1/bar/baz`, then once I get the API code working, I can turn it into a little lego-block-like component that I can combine with another component for fetching the API key and turn that into a "base". I can then call this "base" in the actual app that I'm running, and the little bit of code I made can be used by anyone else that needs to make these API calls, thus cutting down on code repetition (DRY-principle). Then, anyone who wishes to make a change to the component for their own purposes can do so freely, as long as they ensure backwards-compatibility.
 
 So, now that you have a glimpse of the idea, let's take a look into how this can help the Developer Experience and the Development Workflow.
 
